--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.6"
+mechanicalsoup = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.761"
