--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.6"
 mechanicalsoup = "^0.12.0"
+pytz = "^2019.3"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.761"
