--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ pytz = "^2019.3"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.761"
+flake8 = "^3.7.9"
+flake8-isort = "^2.8.0"
+pep8-naming = "^0.9.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
