--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "tiimaweb"
 version = "0.0.0"
 description = "Tiima Web Controller"
+readme = "README.rst"
 authors = ["Tuomas Suutari <tuomas@nepnep.net>"]
 license = "MIT"
 
