--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ tiimaweb = 'tiimaweb.cli:main'
 [tool.poetry.dependencies]
 python = "^3.6"
 mechanicalsoup = "^0.12.0"
-pytz = "^2019.3"
+pytz = ">=2016.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.761"
