--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,13 @@ repository = "https://github.com/suutari/tiimaweb"
 tiimaweb = 'tiimaweb.cli:main'
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^2.7 || ^3.5"
 mechanicalsoup = "^0.12.0"
 pytz = ">=2016.0"
+typing = { version = "*", python = "<3.5" }
 
 [tool.poetry.dev-dependencies]
-mypy = "^0.761"
+mypy = { version = "^0.761", python = "~3.5" }
 flake8 = "^3.7.9"
 flake8-isort = "^2.8.0"
 pep8-naming = "^0.9.1"
